Fix right screen spillover by converting from 'dvw' to '%'

--- a/src/app/components/AboutMe.module.css
+++ b/src/app/components/AboutMe.module.css
@@ -3,7 +3,7 @@
 }
 
 .aboutDescContainer {
-  width: 50dvw;
+  width: 50%;
 }
 
 .textContainer {
@@ -12,7 +12,7 @@
 }
 
 .aboutImgContainer {
-  width: 50dvw;
+  width: 50%;
 }
 
 .headshot {
