--- a/src/app/components/NavBar.module.css
+++ b/src/app/components/NavBar.module.css
@@ -1,5 +1,5 @@
 .navContainer {
-  width: 100dvw;
+  width: 100%;
   margin-top: 40px;
   text-align: center;
 }
