--- a/src/app/components/SiteLogo.module.css
+++ b/src/app/components/SiteLogo.module.css
@@ -3,7 +3,7 @@
   display: inline-block;
   width: 400px;
   text-align: right;
-  margin-right: 50px;
+  padding-right: 50px;
 }
 
 .shineContainer img {
